--- a/index.html
+++ b/index.html
@@ -3,10 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Elegant</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="grid.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header class="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 fixed-block">
+                    <div class="logo">
+                        <img src="images/logo.png" alt="">
+                    </div>
+                    <nav class="navigation">
+                        <div class="nav-menu">
+                            <p class="menu-word">MENU</p>
+                            <div class="spans">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </div>
+                        </div>
+                        <ul class="menu hidden-menu">
+                            <li><a href="">Main</a></li>
+                            <li><a href="">Main</a></li>
+                            <li><a href="">Main</a></li>
+                            <li><a href="">Main</a></li>
+                            <li><a href="">Main</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col-xs-12 header-title">
+                    <h1 class="header-h1">Say <span>Haloa</span> to your Portfolio</h1>
+                </div>
+            </div>
+        </div>
+    </header>
     <script src="app.js"></script>
 </body>
 </html>
