added block workers

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="col-xs-12 fixed-block">
                     <div class="logo">
-                        <img src="images/logo.png" alt="">
+                        <img src="images/index/logo.png" alt="">
                     </div>
                     <nav class="navigation">
                         <div class="nav-menu">
@@ -41,6 +41,85 @@
             </div>
         </div>
     </header>
+    <main>
+        <div class="container">
+            <div class="main-row row">
+                <div class="main-block col-sm-9">
+                    <h4 class="small-title">Who we Are</h4>
+                    <h2 class="large-title">Tell The World About Yourself</h2>
+                    <p class="text">Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc, fiant sollemnes in futurum.</p>
+                    <button class="read-more">Read More About Us</button>
+                </div>
+            </div>
+            <div class="main-row row">
+                <div class="main-block col-sm-9">
+                    <h4 class="small-title">What We Do</h4>
+                    <h2 class="large-title">Show Your Amazing Work</h2>
+                </div>
+            </div>
+        </div>
+        <div class="show-work">
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <img src="images/index/index img (1).png" alt="">
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <img src="images/index/index img (2).png" alt="">
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <img src="images/index/index img (3).png" alt="">
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <img src="images/index/index img (4).png" alt="">
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <img src="images/index/index img (5).png" alt="">
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <img src="images/index/index img (6).png" alt="">
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <img src="images/index/index img (7).png" alt="">
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <img src="images/index/index img (8).png" alt="">
+            </div>     
+        </div>
+        <div class="workers container">
+            <div class="main-row row">
+                <div class="main-block col-sm-9">
+                    <h4 class="small-title">Who We Are</h4>
+                    <h2 class="large-title">The Amazing People Behind This</h2>
+                    <p class="text">Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum</p>
+                </div>
+            </div>
+            <div class="main-row row">
+                <div class="block-worker col-xs-12 col-md-3">
+                    <img src="images/index/index img (9).png" alt="">
+                    <div class="text-block">
+                        <h4 class="small-title">ceo</h4>
+                        <h3 class="name">Tobias Schneider</h3>
+                        <p>Lorem ipsum dolor sit amet, conse tetuer adi piscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.</p>
+                    </div>
+                </div>
+                <div class="block-worker col-xs-12 col-md-3">
+                    <img src="images/index/index img (10).png" alt="">
+                    <div class="text-block">
+                        <h4 class="small-title">Designer</h4>
+                        <h3 class="name">Jack Knife</h3>
+                        <p>Lorem ipsum dolor sit amet, conse tetuer adi piscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.</p>
+                    </div>
+                </div>
+                <div class="block-worker col-xs-12 col-md-3">
+                    <img src="images/index/index img (11).png" alt="">
+                    <div class="text-block">
+                        <h4 class="small-title">Developer</h4>
+                        <h3 class="name">Ricki Hall</h3>
+                        <p>Lorem ipsum dolor sit amet, conse tetuer adi piscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
     <script src="app.js"></script>
 </body>
 </html>
