--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="page-about">
-        <header class="header header-about">
+        <header class="header-about header">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 fixed-block">
@@ -33,8 +33,6 @@
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="blog.html">Blog</a></li>
-                                <li><a href="">Main</a></li>
-                                <li><a href="">Main</a></li>
                             </ul>
                         </nav>
                     </div>
