--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="blog.html">Blog</a></li>
-                                <li><a href="">Main</a></li>
-                                <li><a href="">Main</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -59,10 +57,21 @@
                             est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum
                             formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc,
                             fiant sollemnes in futurum.</p>
-                        <a href="" class="read-more">Read More About Us</a>
+                        <a href="about.html" class="read-more">Read More About Us</a>
                     </div>
                 </div>
-                <!-- Show work -->
+            </div>
+                <!-- Tabs -->
+                
+                    <div class="tabs-nav">
+                        <div class="tabs-nav-item is-active" data-tab-name="tab-1">Show your work</div>
+                        <div class="tabs-nav-item" data-tab-name="tab-2">People behind us</div>
+                        <div class="tabs-nav-item" data-tab-name="tab-3">Last post</div>
+                    </div>
+                
+            <!-- Show work -->
+            <div class="tab-nav-content tab-1 is-active">
+            <div class="container">
                 <div class="main-row row">
                     <div class="main-block col-sm-9">
                         <h4 class="small-title">What We Do</h4>
@@ -96,8 +105,9 @@
                     <img src="images/index/index img (8).png" alt="">
                 </div>
             </div>
+        </div>
             <!-- Workers -->
-            <div class="workers container">
+            <div class="workers tab-nav-content tab-2 container">
                 <div class="main-row row">
                     <div class="main-block col-sm-9">
                         <h4 class="small-title">Who We Are</h4>
@@ -108,7 +118,7 @@
                     </div>
                 </div>
                 <div class="main-row row">
-                    <div class="block-worker col-xs-12 col-md-3">
+                    <div class="block-worker col-xs-12 col-sm-3">
                         <img src="images/index/index img (9).png" alt="">
                         <div class="text-block">
                             <h4 class="small-title">ceo</h4>
@@ -117,7 +127,7 @@
                                 tincidunt ut laoreet dolore.</p>
                         </div>
                     </div>
-                    <div class="block-worker col-xs-12 col-md-3">
+                    <div class="block-worker col-xs-12 col-sm-3">
                         <img src="images/index/index img (10).png" alt="">
                         <div class="text-block">
                             <h4 class="small-title">Designer</h4>
@@ -126,7 +136,7 @@
                                 tincidunt ut laoreet dolore.</p>
                         </div>
                     </div>
-                    <div class="block-worker col-xs-12 col-md-3">
+                    <div class="block-worker col-xs-12 col-sm-3">
                         <img src="images/index/index img (11).png" alt="">
                         <div class="text-block">
                             <h4 class="small-title">Developer</h4>
@@ -138,7 +148,7 @@
                 </div>
             </div>
             <!-- Last post -->
-            <div class="container">
+            <div class="tab-nav-content tab-3 container">
                 <div class="main-row row">
                     <div class="main-block col-xs-12 col-sm-9">
                         <h4 class="small-title">Last Post</h4>
@@ -162,7 +172,7 @@
                     </div>
                 </article>
                 <div class="main-row row">
-                    <a href="" class="read-more">More From Our Blog</a>
+                    <a href="blog.html" class="read-more">More From Our Blog</a>
                 </div>
             </div>
             <!-- Contacts -->
